data/derived/comb/progs/unify/prog8640.ml.out
Characters 340-366:
  |Hoi(a,b) -> ("(sin(pi*"^(exp a )^"))")"/"("(cos(pi*"^(exp b)^"))");;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
